ci: slim build script helpers